--- a/news.html
+++ b/news.html
@@ -11,43 +11,38 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "news.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>News</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=348213683"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=66084645" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=249082268" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;geostar:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu243"><!-- column -->
-    <div class="colelem" id="u243"><!-- simple frame --></div>
-    <!-- m_editable region-id="editable-static-tag-U724-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u724-4" data-muse-uid="U724" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Nataniel Sitarz</p>
+   <div class="clearfix grpelem" id="ppu243"><!-- column -->
+    <div class="clearfix colelem" id="pu243"><!-- group -->
+     <div class="grpelem" id="u243"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="contact.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
+     <div class="grpelem" id="u246"><!-- simple frame --></div>
     </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U762-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u762-4" data-muse-uid="U762" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Indie Game Dev</p>
+    <div class="colelem" id="u406"><!-- content -->
+     <div class="fluid_height_spacer"></div>
     </div>
-    <!-- /m_editable -->
    </div>
-   <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
-   <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
-   <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
-   <a class="nonblock nontext clearfix grpelem" id="u235-4" href="contact.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
-   <div class="grpelem" id="u246"><!-- simple frame --></div>
-   <div class="verticalspacer" data-offset-top="272" data-content-above-spacer="271" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="430" data-content-above-spacer="430" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u519-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
