--- a/news.html
+++ b/news.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=348213683"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=249082268" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=3849589217" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/gruppo:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;geo:n4:all;iceberg:n4:all;iceland:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -35,14 +35,33 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="contact.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-me.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
      <div class="grpelem" id="u246"><!-- simple frame --></div>
     </div>
-    <div class="colelem" id="u406"><!-- content -->
-     <div class="fluid_height_spacer"></div>
+    <div class="clearfix colelem" id="pu1028-4"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U1028-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u1028-4" data-muse-uid="U1028" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Welcome on my website!</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U1033-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u1033-4" data-muse-uid="U1033" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>28.05.2020</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="grpelem" id="u1037"><!-- simple frame --></div>
+     <div class="grpelem" id="u1039" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
+     <div class="grpelem" id="u1040" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="93" data-mu-ie-matrix-dy="-92"><!-- simple frame --></div>
+     <!-- m_editable region-id="editable-static-tag-U1049-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u1049-4" data-muse-uid="U1049" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Hi! Here will be updates on my projects and more info about upcoming other things. Make sure to visit this page often!</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="grpelem" id="u1054"><!-- simple frame --></div>
     </div>
+    <div class="colelem" id="u1038"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="430" data-content-above-spacer="430" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="415" data-content-above-spacer="364" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u519-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
