--- a/about-me.html
+++ b/about-me.html
@@ -17,14 +17,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About me</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=348213683"/>
-  <link rel="stylesheet" type="text/css" href="css/about-me.css?crc=111008752" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=471560163"/>
+  <link rel="stylesheet" type="text/css" href="css/about-me.css?crc=107536408" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/poiret-one:n4:all;gruppo:n4:all;iceland:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/iceland:n4:all;poiret-one:n4:all;gruppo:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
