--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=471560163"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=363290382" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=7602142"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=285193966" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/wire-one:n4:all;gruppo:n4:all;geostar:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;geostar:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -47,13 +47,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>Indie Game Dev</p>
     </div>
     <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U1759-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix colelem" id="u1759-4" href="phone/index.html?devicelock=phone" data-href="page:U1111" data-muse-uid="U1759" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Temporary website for phones</p></a>
+    <!-- /m_editable -->
    </div>
    <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-me.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
    <div class="grpelem" id="u246"><!-- simple frame --></div>
-   <div class="verticalspacer" data-offset-top="272" data-content-above-spacer="271" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="319" data-content-above-spacer="319" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u519-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
