--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=7602142"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=24322661" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=282767237" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;geostar:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/wire-one:n4:all;gruppo:n4:all;geostar:n4:all.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
   <style>
@@ -50,16 +50,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="aha clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu243"><!-- column -->
-    <div class="colelem" id="u243"><!-- simple frame --></div>
+   <div class="clearfix grpelem" id="ppu243"><!-- column -->
+    <div class="clearfix colelem" id="pu243"><!-- group -->
+     <div class="grpelem" id="u243"><!-- simple frame --></div>
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
+    </div>
     <!-- m_editable region-id="editable-static-tag-U724-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u724-4" data-muse-uid="U724" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Nataniel Sitarz</p>
+     <p>Sitarion Produciotns</p>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U762-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u762-4" data-muse-uid="U762" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Indie Game Dev</p>
+     <p>Indie Game Dev Studio</p>
     </div>
     <!-- /m_editable -->
     <div class="clearfix colelem" id="pu1765-4"><!-- group -->
@@ -74,12 +77,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="aha rounded-corners grpelem" id="u1762"><!-- simple frame --></div>
     </div>
    </div>
-   <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
    <div class="clearfix grpelem" id="ppu235-4"><!-- column -->
     <div class="clearfix colelem" id="pu235-4"><!-- group -->
-     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-me.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
      <div class="grpelem" id="u246"><!-- simple frame --></div>
     </div>
     <div class="size_fixed colelem" id="u1768" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
