--- a/phone/index.html
+++ b/phone/index.html
@@ -19,13 +19,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a.css?crc=3852882190"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3992674567" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4022256546" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/wire-one:n4:all;geostar:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/geostar:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -33,12 +33,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu1158-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U1158-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1158-4" data-muse-uid="U1158" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1158-4"><!-- content -->
-     <p>Nataniel Sitarz</p>
+     <p>Sitarion Productions</p>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U1159-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1159-4" data-muse-uid="U1159" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1158-4"><!-- content -->
-     <p>Indie Game Dev</p>
+     <p>Indie Game Dev Studio</p>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U1395-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
@@ -48,10 +48,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix colelem" id="u1401-4" href="projects.html" data-href="page:U1430" data-muse-uid="U1401" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1158-4"><!-- content --><p>PROJECTS</p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U1404-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u1404-4" href="aboutme.html" data-href="page:U1442" data-muse-uid="U1404" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1158-4"><!-- content --><p>ABOUT ME</p></a>
+    <a class="nonblock nontext clearfix colelem" id="u1404-4" href="aboutme.html" data-href="page:U1442" data-muse-uid="U1404" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1158-4"><!-- content --><p>ABOUT US</p></a>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="392" data-content-above-spacer="391" data-content-below-spacer="70" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="458" data-content-above-spacer="420" data-content-below-spacer="70" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu1500"><!-- column -->
     <div class="colelem" id="u1500" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1500"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u1499-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1500"><!-- content -->
