--- a/projects.html
+++ b/projects.html
@@ -23,14 +23,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Projects</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=471560163"/>
-  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=3866830622" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=7602142"/>
+  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=4062562462" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/stint-ultra-expanded:n4:all;strong:n4:all;gruppo:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/strong:n4:all;gruppo:n4:all;stint-ultra-expanded:n4:all.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
   <style>
@@ -95,7 +95,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-me.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT ME</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
     </div>
     <div class="clearfix colelem" id="pu1060"><!-- group -->
      <div class="grpelem" id="u1060"><!-- simple frame --></div>
