--- a/about-us.html
+++ b/about-us.html
@@ -7,30 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Redirect to phone/tablet as necessary
-(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
-0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
-0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)b=document.location.search||"",d=document.location.hash||"",document.write('<style type="text/css">body {visibility:hidden}</style>'),document.location=h+b+d}})("desktop","","phone/news.html");
-
-// Update the 'nojs'/'js' class on the html node
+   // Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "news.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "about-us.css"], "outOfDate":[]};
 </script>
   
-  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://natsitarz.github.com/phone/news.html"/>
-  <title>News</title>
+  <title>About US</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=7602142"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=3939632133" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=329945158" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;iceberg:n4:all;iceland:n4:all;geo:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/poiret-one:n4:all;gruppo:n4:all;iceland:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -40,34 +34,34 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u243"><!-- simple frame --></div>
      <a class="nonblock nontext clearfix grpelem" id="u759-4" href="index.html" data-href="page:U723" data-IBE-flags="txtStyleSrc"><!-- content --><p>HOME</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
-     <div class="grpelem" id="u246"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
     </div>
-    <div class="clearfix colelem" id="pu1028-4"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U1028-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u1028-4" data-muse-uid="U1028" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Welcome on my website!</p>
+    <div class="clearfix colelem" id="pu249"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U249-BP_infinity" template="about-us.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u249" data-muse-uid="U249" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u249_img" src="images/avatar.jpg?crc=51562110" alt="" data-muse-src="images/avatar.jpg?crc=51562110" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1033-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u1033-4" data-muse-uid="U1033" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>28.05.2020</p>
+     <div class="clearfix grpelem" id="pu549"><!-- column -->
+      <div class="colelem" id="u549"><!-- simple frame --></div>
+      <!-- m_editable region-id="editable-static-tag-U259-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="clearfix colelem" id="u259-6" data-muse-uid="U259" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+       <p>Nataniel Sitarz</p>
+       <p>Polish Indie Game Developer</p>
+      </div>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U1057-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="clearfix colelem" id="u1057-4" data-muse-uid="U1057" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+       <p>C++, C#, Unity, Unreal Engine</p>
+      </div>
+      <!-- /m_editable -->
+      <div class="colelem" id="u546"><!-- simple frame --></div>
      </div>
-     <!-- /m_editable -->
-     <div class="grpelem" id="u1037"><!-- simple frame --></div>
-     <div class="grpelem" id="u1039" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
-     <div class="grpelem" id="u1040" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="93" data-mu-ie-matrix-dy="-92"><!-- simple frame --></div>
-     <!-- m_editable region-id="editable-static-tag-U1049-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u1049-4" data-muse-uid="U1049" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Hi! Here will be updates on my projects and more info about upcoming other things. Make sure to visit this page often!</p>
-     </div>
-     <!-- /m_editable -->
-     <div class="grpelem" id="u1054"><!-- simple frame --></div>
     </div>
-    <div class="colelem" id="u1038"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="364" data-content-above-spacer="364" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u235-4" href="about-us.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
+   <div class="grpelem" id="u246"><!-- simple frame --></div>
+   <div class="verticalspacer" data-offset-top="444" data-content-above-spacer="444" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u519-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
