--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- m_editable region-id="editable-static-tag-U724-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u724-4" data-muse-uid="U724" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Sitarion Produciotns</p>
+     <p>Sitarion Productions</p>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U762-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
