--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=9413842" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=208762714" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -47,7 +47,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="pu1028-4"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U1028-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix grpelem" id="u1028-4" data-muse-uid="U1028" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Welcome on my website!</p>
+      <p>Welcome on our website!</p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1033-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -60,7 +60,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u1040" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="93" data-mu-ie-matrix-dy="-92"><!-- simple frame --></div>
      <!-- m_editable region-id="editable-static-tag-U1049-BP_infinity" template="news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix grpelem" id="u1049-4" data-muse-uid="U1049" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Hi! Here will be updates on my projects and more info about upcoming other things. Make sure to visit this page often!</p>
+      <p>Hi! Here will be updates on our projects and more info about upcoming other things. Make sure to visit this page often!</p>
      </div>
      <!-- /m_editable -->
      <div class="grpelem" id="u1054"><!-- simple frame --></div>
