--- a/phone/news.html
+++ b/phone/news.html
@@ -18,14 +18,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>NEWS</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=428043807"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=138061023" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3932994943"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=4080748745" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/geo:n4:all;iceland:n4:all;iceberg:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/iceberg:n4:all;geo:n4:all;iceland:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -34,7 +34,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix colelem" id="u1446-4" href="index.html" data-href="page:U1111" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1446-4"><!-- content --><p>BACK</p></a>
     <!-- m_editable region-id="editable-static-tag-U1508-BP_infinity" template="phone/news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1508-4" data-muse-uid="U1508" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1446-4"><!-- content -->
-     <p>Welcome on my website!</p>
+     <p>Welcome on our website!</p>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U1509-BP_infinity" template="phone/news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -44,11 +44,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U1510-BP_infinity" template="phone/news.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1510-4" data-muse-uid="U1510" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1446-4"><!-- content -->
-     <p>Hi! Here will be updates on my projects and more info about upcoming other things. Make sure to visit this page often!</p>
+     <p>Hi! Here will be updates our my projects and more info about upcoming other things. Make sure to visit this page often!</p>
     </div>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="385" data-content-above-spacer="385" data-content-below-spacer="70" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="391" data-content-above-spacer="391" data-content-below-spacer="70" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu1491"><!-- column -->
     <div class="colelem" id="u1491" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1491"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u1490-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu1491"><!-- content -->
