--- a/index.html
+++ b/index.html
@@ -20,18 +20,49 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://natsitarz.github.com/phone/index.html"/>
-  <title>Home</title>
+  <title>Home Page | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3778909483" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3917828592"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=369405368" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/wire-one:n4:all;gruppo:n4:all;geostar:n4:all.js" type="text/javascript"></script>
-   </head>
+  <script src="https://webfonts.creativecloud.com/geostar:n4:all;gruppo:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
+    <!--HTML Widget code-->
+  
+  <!-- Global Canonical -->
+  <link rel="canonical" href="http://natsitarz.github.com"/><meta property="og:url" content="http://natsitarz.github.com"/><script type="application/ld+json">{"@context": "http://schema.org","@type": "WebPage","url": "http://natsitarz.github.com",
+    "name": "Home Page | Sitarion Productions",
+    "image": "http://natsitarz.github.com/assets/bez-nazwy-1.png",
+    "description": "Sitarion Productions - Indie Game Dev Studio. Check out our projects!"
+  }
+  </script>
+  <!-- Facebook -->
+  <meta property="og:image" content="http://natsitarz.github.com/assets/bez-nazwy-1.png" />
+  <meta property="og:image:width" content="1280"/><meta property="og:image:height" content="720"/>
+  <meta property="og:description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Home Page | Sitarion Productions"/>
+  <meta property="og:locale" content="pl_PL" />
+  <!-- Generic -->
+  <meta name="robots" content="INDEX, FOLLOW"/>
+  <meta name="description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Home Page | Sitarion Productions" />
+  <meta name="twitter:description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!" />
+  <meta name="twitter:image" content="http://natsitarz.github.com/assets/bez-nazwy-1.png">
+  <!-- Fancy -->
+  <meta property="fancy:name" content="Home Page | Sitarion Productions"/>
+  <meta property="fancy:images" content="http://natsitarz.github.com/assets/bez-nazwy-1.png"/>
+  <meta property="fancy:description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!"/>
+  <meta property="fancy:category" content="Media">
+  <style>#u1952 {z-index:-1}</style>
+  
+ </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
@@ -51,9 +82,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
    </div>
-   <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
-   <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
-   <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
+   <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects--sitarion-productions.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
+   <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news--sitarion-productions.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
+   <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us--sitarion-productions.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
+   <div class="size_fixed" id="u1952" data-sizePolicy="fixed" data-pintopage="topcenter"><!-- custom html -->
+    
+
+   </div>
    <div class="grpelem" id="u246"><!-- simple frame --></div>
    <div class="verticalspacer" data-offset-top="272" data-content-above-spacer="271" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
