--- a/phone/news.html
+++ b/phone/news.html
@@ -14,18 +14,17 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "news.css"], "outOfDate":[]};
 </script>
   
-  <link rel="canonical" href="http://natsitarz.github.com/news.html"/>
   <title>NEWS</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3932994943"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=4080748745" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=428043807"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=265559884" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/iceberg:n4:all;geo:n4:all;iceland:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/geo:n4:all;iceberg:n4:all;iceland:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
