--- a/about-us--sitarion-productions.html
+++ b/about-us--sitarion-productions.html
@@ -17,14 +17,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3917828592"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us--sitarion-productions.css?crc=239326676" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us--sitarion-productions.css?crc=274165220" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/iceland:n4:all;strong:n4:all;gruppo:n4:all;poiret-one:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;poiret-one:n4:all;iceland:n4:all;strong:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -85,16 +85,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <div class="colelem" id="u1789"><!-- simple frame --></div>
      </div>
-     <!-- m_editable region-id="editable-static-tag-U1786-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
-     <div class="clip_frame grpelem" id="u1786" data-muse-uid="U1786" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1786_img" src="images/avatar.jpg?crc=51562110" alt="" data-muse-src="images/avatar.jpg?crc=51562110" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+     <!-- m_editable region-id="editable-static-tag-U1988-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u1988" data-muse-uid="U1988" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u1988_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2005-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u2005" data-muse-uid="U2005" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u2005_img" src="images/79658586_2554299231520376_8492013890316533760_o.jpg?crc=321178101" alt="" data-muse-src="images/79658586_2554299231520376_8492013890316533760_o.jpg?crc=321178101" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
     </div>
-    <div class="clearfix colelem" id="pu1824"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U1824-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
-     <div class="clip_frame grpelem" id="u1824" data-muse-uid="U1824" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1824_img" src="images/avatar.jpg?crc=51562110" alt="" data-muse-src="images/avatar.jpg?crc=51562110" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+    <div class="clearfix colelem" id="pu1967"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U1967-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u1967" data-muse-uid="U1967" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u1967_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
      <div class="clearfix grpelem" id="pu1828"><!-- column -->
@@ -129,18 +134,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <div class="colelem" id="u1833"><!-- simple frame --></div>
      </div>
-     <!-- m_editable region-id="editable-static-tag-U1830-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
-     <div class="clip_frame grpelem" id="u1830" data-muse-uid="U1830" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1830_img" src="images/avatar.jpg?crc=51562110" alt="" data-muse-src="images/avatar.jpg?crc=51562110" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+     <!-- m_editable region-id="editable-static-tag-U1974-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u1974" data-muse-uid="U1974" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u1974_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2015-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u2015" data-muse-uid="U2015" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u2015_img" src="images/94889307_683124282463329_8767221564849520640_o.jpg?crc=3957013545" alt="" data-muse-src="images/94889307_683124282463329_8767221564849520640_o.jpg?crc=3957013545" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
     </div>
-    <div class="clearfix colelem" id="pu1862"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U1862-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
-     <div class="clip_frame grpelem" id="u1862" data-muse-uid="U1862" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1862_img" src="images/avatar.jpg?crc=51562110" alt="" data-muse-src="images/avatar.jpg?crc=51562110" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
-     </div>
-     <!-- /m_editable -->
+    <div class="clearfix colelem" id="ppu1866"><!-- group -->
      <div class="clearfix grpelem" id="pu1866"><!-- column -->
       <div class="colelem" id="u1866"><!-- simple frame --></div>
       <!-- m_editable region-id="editable-static-tag-U1864-BP_infinity" template="about-us--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -156,6 +161,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <div class="colelem" id="u1865"><!-- simple frame --></div>
      </div>
+     <!-- m_editable region-id="editable-static-tag-U1981-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u1981" data-muse-uid="U1981" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u1981_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U1995-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u1995" data-muse-uid="U1995" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u1995_img" src="images/86473250_2568968523340478_7647871191075520512_n.jpg?crc=3992447736" alt="" data-muse-src="images/86473250_2568968523340478_7647871191075520512_n.jpg?crc=3992447736" data-heightwidthratio="1.004739336492891" data-image-width="211" data-image-height="212"/>
+     </div>
+     <!-- /m_editable -->
     </div>
    </div>
    <div class="grpelem" id="u246"><!-- simple frame --></div>
