--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home Page | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3917828592"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=369405368" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4138044773" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/geostar:n4:all;gruppo:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;wire-one:n4:all;geostar:n4:all.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
   <!-- Global Canonical -->
@@ -85,11 +85,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext clearfix grpelem" id="u234-4" href="projects--sitarion-productions.html" data-href="page:U189" data-IBE-flags="txtStyleSrc"><!-- content --><p>PROJECTS</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u236-4" href="news--sitarion-productions.html" data-href="page:U213" data-IBE-flags="txtStyleSrc"><!-- content --><p>NEWS</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us--sitarion-productions.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
+   <div class="grpelem" id="u246"><!-- simple frame --></div>
    <div class="size_fixed" id="u1952" data-sizePolicy="fixed" data-pintopage="topcenter"><!-- custom html -->
     
 
    </div>
-   <div class="grpelem" id="u246"><!-- simple frame --></div>
    <div class="verticalspacer" data-offset-top="272" data-content-above-spacer="271" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
