--- a/about-us--sitarion-productions.html
+++ b/about-us--sitarion-productions.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us--sitarion-productions.css?crc=274165220" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us--sitarion-productions.css?crc=4247601878" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -129,10 +129,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U1835-BP_infinity" template="about-us--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="clearfix colelem" id="u1835-4" data-muse-uid="U1835" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-       <p>Senior VFX Artist, Tester</p>
+       <p>Senior VFX Artist, Graphic Designer, Tester</p>
       </div>
       <!-- /m_editable -->
-      <div class="colelem" id="u1833"><!-- simple frame --></div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U1974-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u1974" data-muse-uid="U1974" data-muse-type="img_frame"><!-- image -->
@@ -145,6 +144,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
     </div>
+    <div class="colelem" id="u1833"><!-- simple frame --></div>
     <div class="clearfix colelem" id="ppu1866"><!-- group -->
      <div class="clearfix grpelem" id="pu1866"><!-- column -->
       <div class="colelem" id="u1866"><!-- simple frame --></div>
@@ -156,10 +156,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U1867-BP_infinity" template="about-us--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="clearfix colelem" id="u1867-4" data-muse-uid="U1867" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-       <p>Audio Director, Tester</p>
+       <p>Graphic Designer, Audio Director, Tester</p>
       </div>
       <!-- /m_editable -->
-      <div class="colelem" id="u1865"><!-- simple frame --></div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U1981-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u1981" data-muse-uid="U1981" data-muse-type="img_frame"><!-- image -->
@@ -172,9 +171,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
     </div>
+    <div class="colelem" id="u1865"><!-- simple frame --></div>
    </div>
    <div class="grpelem" id="u246"><!-- simple frame --></div>
-   <div class="verticalspacer" data-offset-top="1333" data-content-above-spacer="1332" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1346" data-content-above-spacer="1345" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u519-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
